--- a/pages/form/form.html
+++ b/pages/form/form.html
@@ -20,37 +20,44 @@
       <form action="/" class="form">
         <div class="form-item name">
           <h2 class="title">Shipping details</h2>
-          <div class="box">
-            <label for="name">First</label>
-            <input type="text" name="name" id="name" placeholder="Name" minlength="4" pattern="[a-zA-Z]{3,15}"
-              required />
+          <div class="name-container">
+            <div class="box">
+              <label for="name">First</label>
+              <input type="text" name="name" id="name" placeholder="Name" minlength="4" pattern="[a-zA-Z]{3,30}"
+                required />
+            </div>
+            <div class="box">
+              <label for="surname">Last</label>
+              <input type="text" name="surname" id="surname" placeholder="Surname" minlength="5"
+                pattern="[a-zA-Z]{4,30}" title="5 to 15 letters" required />
+            </div>
           </div>
-          <div class="box">
-            <label for="surname">Last</label>
-            <input type="text" name="surname" id="surname" placeholder="Surname" minlength="5" pattern="[a-zA-Z]{5,15}"
-              title="5 to 15 letters" required />
-          </div>
-          <div class="box">
-            <label for="delivery-date">Delivery date</label>
-            <input type="date" name="delivery-date" id="delivery-date" placeholder="date" minlength="4" required />
-          </div>
+
         </div>
         <div class="form-item adress">
           <h2 class="title">Adress</h3>
-          <div class="box">
-            <label for="house-number">Street </label>
-            <input type="text" name="street" id="street" placeholder="street" pattern="^[a-zA-Z0-9]+$" required />
-          </div>
-          <div class="box">
-            <label for="house-number">House number </label>
-            <input type="number" name="street" id="house-number" placeholder="house number" pattern="[0-9 _-]" required />
-          </div>
-          <div class="box">
-            <label for="flat-number">Flat number</label>
-            <input type="number" name="street" id="flat-number" placeholder="flat number" pattern="^[0-9]" required />
-          </div>
+            <div class="box">
+              <label for="house-number">Street </label>
+              <input type="text" name="street" id="street" placeholder="street" pattern="^[a-zA-Z0-9]+$" required />
+            </div>
+            <div class="adress-number">
+              <div class="box">
+                <label for="house-number">House number </label>
+                <input type="number" name="street" id="house-number" placeholder="house number" pattern="[0-9 _-]"
+                  required />
+              </div>
+              <div class="box">
+                <label for="flat-number">Flat number</label>
+                <input type="number" name="street" id="flat-number" placeholder="flat number" pattern="^[0-9]"
+                  required />
+              </div>
+            </div>
+            <div class="box">
+              <label for="delivery-date">Delivery date</label>
+              <input type="date" name="delivery-date" id="delivery-date" placeholder="date" required />
+            </div>
         </div>
-        
+
         <div class="form-itempayment">
           <h2 class="title">Payment Information</h2>
           <input type="radio" value="none" id="payment-card" name="payment" checked />
@@ -58,7 +65,7 @@
           <input type="radio" value="none" id="payment-cash" name="payment" />
           <label for="payment-cash" class="radio">Cash</label>
         </div>
-        
+
         <div class="gift">
           <h2>Choose 2 gifts (optional): </h2>
           <input type="checkbox" id="option1" name="option1" value="pack as a gift">
@@ -71,12 +78,13 @@
           <label for="vehicle4"> branded pen or pencil</label><br>
         </div>
         <div class="btn-block">
-          <button class=".btn-confirm" type="submit" disabled>PURCHASE</button>
+          <button class=".btn-confirm" type="submit">PURCHASE</button>
         </div>
       </form>
     </div>
   </div>
   </div>
+  <script src="./form.js"></script>
 </body>
 
 </html>
