--- a/pages/form/form.html
+++ b/pages/form/form.html
@@ -38,17 +38,18 @@
           <h2 class="title">Adress</h3>
             <div class="box">
               <label for="house-number">Street </label>
-              <input type="text" name="street" id="street" placeholder="street" pattern="^[a-zA-Z0-9]+$" required />
+              <input type="text" name="street" id="street" placeholder="street" minlength="5" pattern="[a-zA-Z0-9]{4,50}" required />
             </div>
             <div class="adress-number">
               <div class="box">
                 <label for="house-number">House number </label>
-                <input type="number" name="street" id="house-number" placeholder="house number" pattern="[0-9 _-]"
+                <input type="number" name="house-number" id="house-number" placeholder="house number" min="0" pattern="[0-9]"
                   required />
               </div>
               <div class="box">
                 <label for="flat-number">Flat number</label>
-                <input type="number" name="street" id="flat-number" placeholder="flat number" pattern="^[0-9]"
+
+                <input type="text" name="flat-number" id="flat-number" placeholder="flat number"  pattern = '^\d+(?:-\d+)*$'
                   required />
               </div>
             </div>
@@ -60,21 +61,21 @@
 
         <div class="form-itempayment">
           <h2 class="title">Payment Information</h2>
-          <input type="radio" value="none" id="payment-card" name="payment" checked />
+          <input type="radio" value="card" id="payment-card" name="payment" required checked />
           <label for="male" class="radio">Card</label>
-          <input type="radio" value="none" id="payment-cash" name="payment" />
+          <input type="radio" value="cash" id="payment-cash" name="payment" required/>
           <label for="payment-cash" class="radio">Cash</label>
         </div>
 
         <div class="gift">
           <h2>Choose 2 gifts (optional): </h2>
-          <input type="checkbox" id="option1" name="option1" value="pack as a gift">
+          <input type="checkbox" id="option1" name="option1" value="gift">
           <label for="option1"> pack as a gift</label><br>
-          <input type="checkbox" id="option2" name="option2" value="add postcard">
+          <input type="checkbox" id="option2" name="option2" value="postcard">
           <label for="option2"> add postcard</label><br>
-          <input type="checkbox" id="option3" name="option3" value="provide 2% discount to the next time">
+          <input type="checkbox" id="option3" name="option3" value="discount">
           <label for="option3"> provide 2% discount to the next time</label><br>
-          <input type="checkbox" id="option4" name="option3" value="branded pen or pencil">
+          <input type="checkbox" id="option4" name="option3" value="pen">
           <label for="vehicle4"> branded pen or pencil</label><br>
         </div>
         <div class="btn-block">
