feat: add disabled

--- a/pages/form/form.html
+++ b/pages/form/form.html
@@ -79,7 +79,7 @@
           <label for="vehicle4"> branded pen or pencil</label><br>
         </div>
         <div class="btn-block">
-          <button class="btn-confirm" type="submit" >PURCHASE</button>
+          <button class="btn-confirm" type="submit" disabled>PURCHASE</button>
         </div>
       </form>
     </div>
